--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "rellax": "^1.12.1",
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
-    "swiped-events": "^1.1.6",
-    "swiper": "^7.4.1"
+    "swiped-events": "^1.1.6"
   }
 }
